examples/errors/condition_type_branch.aaa
fn main begin
    if 3 true begin
        nop
    end
    drop
end
